<resources>
    <string name="app_name">Formulario</string>
    <string name="titulo">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="guardar">Aceptar</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="cine">Cine</string>
    <string name="Gimnasio">Gimnasio</string>
    <string name="Nadar">Nadar</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="genero">Genero</string>
    <string name="Ciclismo">Ciclismo</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="login">User Name</string>
    <string name="password">Password</string>
    <string name="password2">Retry Password</string>
    <string name="ciudad">Ciudad de Nacimiento</string>

    <string-array name="city_born">
        <item>Select</item>
        <item>Barranquilla</item>
        <item>Bogota</item>
        <item>Medellin</item>
        <item>Cali</item>
        <item>Pereira</item>
        <item>Pasto</item>
        <item>Manizales</item>
        <item>Neiva</item>
    </string-array>
</resources>
