<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context="com.martinez.steven.sesion2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/eNombre"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:id="@+id/eCorreo"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasatiempos"
        android:textSize="25sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cine"
            android:id="@+id/cCine"
            android:onClick="onCheckBoxClicked"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nadar"
            android:id="@+id/cNadar"
            android:onClick="onCheckBoxClicked"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gimnasio"
            android:id="@+id/cGym"
            android:onClick="onCheckBoxClicked"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ciclismo"
            android:id="@+id/cBike"
            android:onClick="onCheckBoxClicked"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="25sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_mostrar_fecha_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/formato_fecha"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="8dp" />

        <ImageButton
            android:id="@+id/ib_obtener_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_date_range_black_24dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="ContentDescription"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:text="@string/guardar"
        android:id="@+id/bGuardar"
        android:onClick="guardar"

        />

</LinearLayout>
